added MovieAPI class to request movies with okhttp, parsing them, and creating a list; adapted HomeController to use method from MovieAPI and displaying movies received from web; added dependencies